[package]
name = "kbd"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
evdev = "0.12"
serde = { version = "1.0", features = ["derive"] }
timer = "0.2.0"
toml = "0.9.7"
uinput = "0.1.3"

[profile.release]
codegen-units = 1
lto = true
# opt-level = 3
opt-level = "z"
panic = "abort"
strip = true
